--- a/ecommerce-app/src/index.css
+++ b/ecommerce-app/src/index.css
@@ -49,6 +49,9 @@ button:hover{
 .menu a:link{
   text-decoration: none;
 }
+input{
+  background-color: #f1f1f1;
+}
 .search{
   padding: 12px 15px;
   width: 50%;
@@ -63,7 +66,7 @@ button:hover{
   margin: 50px 50px;
 }
 .items{
-  width: 250px;
+  width: 240px;
   height: 420px;
   border: solid #f1f1f1;
 }
