--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,10 @@ code {
   color: #001066;
 }
 .navMenu{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  border-bottom-style: solid;
-  border-color: #f5f5f5;
-  padding: 8px 30px; 
+display: flex;
+align-items: center;
+justify-content: space-between;
+width: 100%;
 }
 button{
   background-color: #001066;
